--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <h1>I'm a header 1!</h1>
     
     Hello there, awesome person!
+    
+    <img src="https://avatars0.githubusercontent.com/u/37021240?v=4">
   </body>
 </html>
