--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <img src="https://avatars0.githubusercontent.com/u/37021240?v=4">
     
     <ul>
-      <li>https://www.google.com/</li>
-      <li>https://br.udacity.com</li>
-      <li>https://www.linkedin.com/</li>
+      <li><a href="https://www.google.com/">Google</a></li>
+      <li><a href="https://br.udacity.com">Udacity</a></li>
+      <li><a href="https://www.linkedin.com/">Linkedin</a></li>
     </ul>
     
   </body>
